--- a/libraries/.babelrc
+++ b/libraries/.babelrc
@@ -1,4 +1,15 @@
 {
-  "presets": ["env", "react", "stage-2"],
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ],
+    "react",
+    "stage-2"
+  ],
   "plugins": ["styled-components"]
 }
