--- a/libraries/package.json
+++ b/libraries/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.dev.js --hot",
     "test": "jest",
-    "test-coverage": "npm test -- --coverage",
+    "coverage": "npm test -- --coverage",
     "build": "npm run lint && webpack --config webpack/webpack.prod.js --mode production",
     "build-dev": "npm run lint && webpack --config webpack/webpack.dev.js",
     "lint": "eslint src/** --ext .js,.jsx",
@@ -21,6 +21,7 @@
     "styled-components": "^3.4.5"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.5.0",
+    "nock": "^9.6.1",
     "prettier": "^1.14.2",
     "prettier-eslint": "^8.8.2",
     "react-hot-loader": "^4.3.5",
